tests/compile_msg/declare/widget_before_field_fail.stderr
error: Field should always declare before children.
 --> tests/ui/declare/widget_before_field_fail.rs:8:7
  |
8 |       size
  |       ^^^^
